tests/allowedUnsafeSysctls/allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-forbidden-sysctls-allowed
  labels:
    app: nginx-forbidden-sysctls
spec:
  containers:
  - name: nginx
    image: nginx
  securityContext:
    sysctls:
    - name: kernel.msgmax
      value: "65536"
