tests/allowedUnsafeSysctls/kyverno.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psp-allowedunsafesysctls
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: sysctls
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: >-
          allowed unsafe sysctls are limited
        pattern:
          spec:
            =(securityContext):
              =(sysctls):
                - name: kernel.msgmax
